--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://use.typekit.net/wag5dje.css">
   <link rel="stylesheet" href="public/css/rese.css">
-  <link rel="stylesheet" href="/public/index/index.css">
+  <link rel="stylesheet" href="public/index/index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <title>Count Test</title>
 </head>
