--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="public/css/rese.css">
   <link rel="stylesheet" href="public/index/index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <title>Count Test</title>
+  <title>KEYAKI</title>
 </head>
 <body>
   <h1>
